# PaperScraper

./: .gitignore  .pre-commit-config.yaml  .test.env  LICENSE  README.md  SSfR.py  home.html  imagehelpers.py  info.txt  main.py  pyproject.toml  requirements.txt  strhelpers.py  tests.py  todo.md
.github/workflows/: tests.yml
app/: filehelpers.py  imagehelpers.py  main.py  strhelpers.py  submissionhelpers.py  urlhelpers.py
app/helpers/: files.py  strings.py  urls.py
app/tests/: test_files.py  test_main.py  test_strings.py  test_urls.py  tests.py
command-line/: main.py
command_line/: main.py
core/: __init__.py  core.py
core/models/: __init__.py  parsers.py  submission_source.py  submission_wrapper.py
core/parsers/: __init__.py  flickr.py  imgur.py  parsers.py
core/reddit/: __init__.py  reddit.py  submission_wrapper.py
core/tests/: snapshotter.py
core/utils/: urls.py
src/: client_bundle.py  file_manager.py  main.py
src/core/: __init__.py  client_bundle.py  file_manager.py  functional.py
src/io/: __init__.py  client_bundle.py
src/model/: __init__.py  parsers.py  strings.py  submission_source.py  submission_wrapper.py  urls.py
src/parsers/: __init__.py  reddit.py  single_image.py
src/parsing/: __init__.py  flickr.py  imgur.py  reddit.py  single_image.py
src/reddit/: __init__.py  core.py  sortoption.py  submission_source.py  submission_wrapper.py
src/templates/: 404.html  500.html  apology.html  index.html  login.html
src/utils/: files.py  parsers.py  strings.py  submission_wrapper.py  urls.py
src/view/: flask_web_view.py  view.py
templates/: 404.html  500.html  base.html  home.html  index.html  login.html
tests/: __init__.py  conftest.py  test_core.py  test_files.py  test_parsers.py  test_strings.py  test_submission_wrapper.py  test_urls.py  utils.py
tests/cassettes/: TestGetExtension.test_jpeg.yaml  TestImgurParser.test_handles_album.yaml  TestImgurParser.test_handles_gallery.yaml  TestImgurParser.test_handles_single_image.yaml  TestRedditParser.test_gallery.yaml  TestRedditParser.test_single_image.yaml  TestSingleImageParser.test_does_not_recognizes_other.yaml  TestSingleImageParser.test_recognizes_single_image.yaml
tests/core/: test_client_bundle.py  test_core.py  test_file_manager.py  test_functional.py
tests/main/: test_arguments.py  test_handle_wrapped.py  test_main.py
tests/model/: __init__.py  test_strings.py  test_submission_wrapper.py  test_urls.py
tests/parsers/: imgur_test_data.json  test_flickr.py  (+5 more)
web/: main.py
(+32 files in other folders)
