[project]
name = "paperscraper"
version = "0.1.0"
description = ""
authors = [{ name = "Samuel Lowe", email = "samlowe106@gmail.com" }]
requires-python = ">=3.11,<4"
readme = "README.md"
license = "MIT"
dependencies = [
    "beautifulsoup4>=4.12.3,<5",
    "httpx>=0.28.1,<0.29",
    "praw>=7.8.1,<8",
    "pre-commit>=4.0.1,<5",
    "python-dotenv>=1.2.2",
    "pytest>=9.0.3",
    "pytest-dotenv>=0.5.2,<0.6",
    "vcrpy>8.0.0",
    "pytest-recording>=0.13.2,<0.14",
    "pytest-asyncio>=1.3.0",
]

[tool.uv]
package = false

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
env_files = [".test.env"]
env_override_existing_values = 1
