[project]
name = "paperscraper"
version = "0.1.0"
description = ""
authors = [{ name = "Samuel Lowe", email = "samlowe106@gmail.com" }]
requires-python = ">=3.12,<4"
readme = "README.md"
license = "MIT"
dependencies = [
    "httpx>=0.28.1,<0.29",
    "pre-commit>=4.0.1,<5",
    "python-dotenv>=1.2.2",
    "pytest>=9.0.3",
    "pytest-dotenv>=0.5.2,<0.6",
    "vcrpy>=8.2.1",
    "pytest-recording>=0.13.2,<0.14",
    "pytest-asyncio>=1.3.0",
    "coverage>=7.14.0",
    "pytest-cov>=7.1.0",
    "asyncpraw>=7.8.1",
    "aiofiles>=24.1.0",
    "pytest-timeout>=2.3.0",
]

[tool.mypy]
explicit_package_bases = true

[tool.uv]
package = false

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
env_files = [".test.env"]
env_override_existing_values = 1
# fail any test that hangs (e.g. an async deadlock) instead of stalling the run
timeout = 30
